<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_menu_servers"
        android:title="@string/menu_servers"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_frequency"
    android:title="@string/menu_frequency"
    android:showAsAction="never"/>
    <item android:id="@+id/action_menu_band"
        android:title="@string/menu_band"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_mode"
        android:title="@string/menu_mode"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_filter"
        android:title="@string/menu_filter"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_connection"
        android:title="@string/menu_connection"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_receiver"
        android:title="@string/menu_receiver"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_agc"
        android:title="@string/menu_agc"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_dsp"
        android:title="@string/menu_dsp"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_gain"
        android:title="@string/menu_gain"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_fps"
        android:title="@string/menu_fps"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_spectrum_average"
        android:title="@string/menu_spectrum_average"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_tx"
        android:title="@string/menu_tx"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_jog_dir"
        android:title="@string/menu_jog_dir"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_tx_user"
        android:title="@string/menu_tx_user"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_mic_gain"
        android:title="@string/menu_mic_gain"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_master"
        android:title="@string/menu_master"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_about"
        android:title="@string/menu_about"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_quit"
        android:title="@string/menu_quit"
        android:showAsAction="never"/>
    <item android:id="@+id/action_menu_help"
        android:title="@string/menu_help"
        android:showAsAction="never"/>
    <!-- Add other menu items here, and in AHPSDRActivity put them
    under the onOptionsItemSelected(MenuItem item) method.  See
    https://developer.android.com/training/basics/actionbar/adding-buttons.html-->

    menu.add(0, MENU_SERVERS, 0, "Servers"); //kb3omm reordered the menu to my likings
    menu.add(0, MENU_BAND, 0, "Band");
    menu.add(0, MENU_FREQUENCY, 0, "Frequency");
    menu.add(0, MENU_MODE, 0, "Mode");
    menu.add(0, MENU_FILTER, 0, "Filter");
    menu.add(0, MENU_CONNECTION,0, "Connection");
    menu.add(0, MENU_RECEIVER,0, "Receiver");
    menu.add(0, MENU_AGC, 0, "AGC");
    menu.add(0, MENU_DSP, 0, "DSP");
    menu.add(0, MENU_GAIN, 0, "GAIN");
    menu.add(0, MENU_FPS, 0, "FPS");
    menu.add(0, MENU_SPECTRUM_AVERAGE, 0, "Spectrum Average");
    menu.add(0, MENU_TX, 0, "ALLOW TX");
    menu.add(0, MENU_JOG_DIR, 0, "> Buttons Move Spectrum");
    menu.add(0, MENU_TX_USER, 0, "TX User Password");
    menu.add(0, MENU_MIC_GAIN, 0, "MIC GAIN");
    menu.add(0, MENU_MASTER, 0, "MASTER");
    menu.add(0, MENU_ABOUT, 0, "About");
    //menu.add(0, MENU_DONATE, 0, "Donate Bitcoin");
    menu.add(0, MENU_QUIT, 0, "Quit");

    public static final int RX_0 = 0;
    public static final int RX_1 = 1;
    public static final int RX_2 = 2;
    public static final int RX_3 = 3;
    public static final int RX_4 = 4;
    public static final int RX_5 = 5;
    public static final int RX_6 = 6;
    public static final int RX_7 = 7;

    public static final int MENU_QUIT = 0;
    public static final int MENU_BAND = 1;
    public static final int MENU_MODE = 2;
    public static final int MENU_FILTER = 3;
    public static final int MENU_AGC = 4;
    public static final int MENU_DSP = 5;
    public static final int MENU_GAIN = 6;
    public static final int MENU_FPS = 7;
    public static final int MENU_CONNECTION = 8;
    public static final int MENU_RECEIVER = 9;
    public static final int MENU_FREQUENCY = 10;
    public static final int MENU_SERVERS = 11;
    public static final int MENU_TX = 12;
    public static final int MENU_TX_USER = 13;
    public static final int MENU_JOG_DIR = 14;
    public static final int MENU_MASTER = 15;
    public static final int MENU_MIC_GAIN = 16;
    public static final int MENU_SPECTRUM_AVERAGE = 17;
    public static final int MENU_ABOUT = 18;
    public static final int MENU_DONATE = 19;

    public static final CharSequence[] bands = { "160", "80", "60", "40", "30",
    "20", "17", "15", "12", "10", "6", "GEN", "WWV", "Reset" };

    private int band = BAND_20;
    private long frequency=14200000L;

    private long band_160_freq = 1850000L;
    private long band_80_freq = 3850000L;
    private long band_60_freq = 5371500L;
    private long band_40_freq = 7050000L;
    private long band_30_freq = 10135000L;
    private long band_20_freq = 14200000L;
    private long band_17_freq = 18130000L;
    private long band_15_freq = 21270000L;
    private long band_12_freq = 24910000L;
    private long band_10_freq = 28500000L;
    private long band_6_freq = 50200000L;
    private long band_gen_freq = 15310000L;
    private long band_wwv_freq = 10000000L;

    public static final int BAND_160 = 0;
    public static final int BAND_80 = 1;
    public static final int BAND_60 = 2;
    public static final int BAND_40 = 3;
    public static final int BAND_30 = 4;
    public static final int BAND_20 = 5;
    public static final int BAND_17 = 6;
    public static final int BAND_15 = 7;
    public static final int BAND_12 = 8;
    public static final int BAND_10 = 9;
    public static final int BAND_6 = 10;
    public static final int BAND_GEN = 11;
    public static final int BAND_WWV = 12;
    public static final int BAND_RESET = 13;

    private int mode = MODE_USB;

    public static final CharSequence[] modes = { "LSB", "USB", "DSB", "CWL",
    "CWU", "FMN", "AM", "DIGU", "SPEC", "DIGL", "SAM", "DRM" };
    public static final int MODE_LSB = 0;
    public static final int MODE_USB = 1;
    public static final int MODE_DSB = 2;
    public static final int MODE_CWL = 3;
    public static final int MODE_CWU = 4;
    public static final int MODE_FMN = 5;
    public static final int MODE_AM = 6;
    public static final int MODE_DIGU = 7;
    public static final int MODE_SPEC = 8;
    public static final int MODE_DIGL = 9;
    public static final int MODE_SAM = 10;
    public static final int MODE_DRM = 11;

    public static final CharSequence[] agcs = { "OFF", "LONG", "SLOW",
    "MEDIUM", "FAST" };
    private int agc = AGC_LONG;

    public static final int AGC_OFF = 0;
    public static final int AGC_LONG = 1;
    public static final int AGC_SLOW = 2;
    public static final int AGC_MEDIUM = 3;
    public static final int AGC_FAST = 4;

    public static final CharSequence[] dsps = { "NR", "ANF", "NB", "IQ CORRECTION", "RX DC Block" };

    public static final int DSP_NR = 0;
    public static final int DSP_ANF = 1;
    public static final int DSP_NB = 2;
    public static final int DSP_IQ = 3;
    public static final int DSP_RXDC_BLOCK = 4;

    private boolean[] dsp_state = { false, false, false, false, false };

    public static final CharSequence[] txs = { "Allow Tx" };
    public static final CharSequence[] jds = { "> Buttons Move Spectrum" };
    public static final int TX_ALLOW = 0;
    public static final int JOG_DIR_SPEC = 0;
    public boolean[] tx_state = { false };
    public boolean[] jd_state = { false };

    public static final CharSequence[] gains = { "0", "10", "20", "30", "40",
    "50", "60", "70", "80", "90", "100" };

    public int gain = 5;

    public static final CharSequence[] micgains = { "default", "x2", "x4", "x8", "x16", "x32", "x64" };

    public int micgain = 0;

    public static final CharSequence[] fpss = { "1", "2", "3", "4", "5",
    "6", "7", "8", "9", "10", "11", "12", "13", "14", "15" };

    public int fps = FPS_10;

    public static final int FPS_1 = 0;
    public static final int FPS_2 = 1;
    public static final int FPS_3 = 2;
    public static final int FPS_4 = 3;
    public static final int FPS_5 = 4;
    public static final int FPS_6 = 5;
    public static final int FPS_7 = 6;
    public static final int FPS_8 = 7;
    public static final int FPS_9 = 8;
    public static final int FPS_10 = 9;
    public static final int FPS_11 = 10;
    public static final int FPS_12 = 11;
    public static final int FPS_13 = 12;
    public static final int FPS_14 = 13;
    public static final int FPS_15 = 14;

    public static final CharSequence[] spectrumAverages = { "0", "1", "2", "3", "4", "5", "6", "7", "8"};

    private int spectrumAverage = 0;

    public static final CharSequence[] ssbFilters = { "5.0k", "4.4k", "3.8k",
    "3.3k", "2.9k", "2.7k", "2.4k", "2.1k", "1.8k", "1.0k" };
    public static final CharSequence[] cwFilters = { "1.0k", "800", "750",
    "600", "500", "400", "250", "100", "50", "25" };
    public static final CharSequence[] amFilters = { "16.0k", "12.0k", "10.0k",
    "8.0k", "6.6k", "5.2k", "4.0k", "3.1k", "2.9k", "2.0k" };
    public static final CharSequence[] fmFilters = { "80.0k", "12.0k", "10.0k",
    "8.0k", "6.6k", "5.2k", "4.0k", "3.1k", "2.9k", "2.0k" };

    private int filter = FILTER_5;
    private CharSequence[] filters;
    private int filterLow=150;
    private int filterHigh=2875;
    private CustomAdapter filterAdapter;

    public static final int FILTER_0 = 0;
    public static final int FILTER_1 = 1;
    public static final int FILTER_2 = 2;
    public static final int FILTER_3 = 3;
    public static final int FILTER_4 = 4;
    public static final int FILTER_5 = 5;
    public static final int FILTER_6 = 6;
    public static final int FILTER_7 = 7;
    public static final int FILTER_8 = 8;
    public static final int FILTER_9 = 9;
    -->



</menu>
